--- a/Odin/Views/Orders/Partials/_Itinerary.cshtml
+++ b/Odin/Views/Orders/Partials/_Itinerary.cshtml
@@ -90,16 +90,16 @@
                         if (dt2.Value.ToShortDateString() == dt.Value.ToShortDateString())
                         {
                             i++;
-                            <li class="">
+                            <li class="testClass">
                                 @if (Model.Itinerary.ElementAt(j).ItemType.Contains("Appointment"))
                                 {                                    
-                                    <a id="showAppointment" class="showAppointment row" data-appointment-id="@Model.Itinerary.ElementAt(j).Id" data-toggle="modal" data-target="#modalForm">
+                                    <a id="showAppointment" class="showAppointment row noteRow" data-appointment-id="@Model.Itinerary.ElementAt(j).Id" data-toggle="modal" data-target="#modalForm">
                                         <span class="eventTime col-sm-12 col-md-2">@(dt2.HasValue ? dt2.Value.ToString("hh:mm tt") : "NA")&nbsp;</span><span class="eventNote col-sm-12 col-md-10">@al</span>
                                     </a>
                                 }
                                 else
                                 {
-                                    <a class="row" onclick="@link">
+                                    <a class="row noteRow" onclick="@link">
                                         <span class="eventTime col-sm-12 col-md-2">@(dt2.HasValue ? dt2.Value.ToString("hh:mm tt") : "NA")&nbsp;</span><span class="eventNote col-sm-12 col-md-10">@al</span>
                                     </a>
                                 }
