--- a/Odin/Content/css/bookmarklet.scss
+++ b/Odin/Content/css/bookmarklet.scss
@@ -11,7 +11,6 @@
 }
 
 .bm-form-group {
-    padding-bottom: 25px;
     width: 100%;
     max-width: 100%;
 
@@ -26,6 +25,17 @@
 }
 
 .bm-btn-container {
+    padding-top: 10px;
     width: 100%;
     text-align: center;
+}
+
+
+
+div[data-notify].alert-success {
+    background-color: $DW_LtPurple;
+}
+
+div[data-notify].alert-danger {
+    background-color: $DW_Red;
 }
