--- a/Odin/Views/BookMarklet/Shared/_BookMarklet.cshtml
+++ b/Odin/Views/BookMarklet/Shared/_BookMarklet.cshtml
@@ -7,6 +7,9 @@
     @Styles.Render("~/Content/cssBundle")
     @Scripts.Render("~/bundles/modernizr")
     @Styles.Render("~/Styling/bookmarklet")
+    
+    @Scripts.Render("~/bundles/lib")
+    @Scripts.Render("~/bundles/app")
 </head>
 <body>
     @RenderBody()
