--- a/Odin/Views/Shared/Partials/_notifications.cshtml
+++ b/Odin/Views/Shared/Partials/_notifications.cshtml
@@ -9,16 +9,18 @@
 {
     if (!notification.IsRead)
     {
-        <li data-OrderId="@notification.NotificationOrderId" data-id="@notification.Id" data-isread="@notification.IsRead" class="notification notifications_unread" id="notificationlistitem_unread">
+        <li data-OrderId="@notification.NotificationOrderId" data-id="@notification.Id" data-isread="@notification.IsRead" data-isremoved="@notification.IsRemoved" class="notification notifications_unread" id="notificationlistitem_unread">
             @*<input type="radio" id="r1" name="r1" />*@            
             <label id="notificationlabel" class="notifications notification-label notification-close-unread">&times</label>           
-            <strong>@notification.NotificationTitle</strong>
-            <br />Your manager has assigned you a new Transferee, their name is  <a href="/Orders/Transferee/@notification.NotificationOrderId" class="notifications">@notification.NotificationOrderTransfereeFullName</a>
+            
+                <strong>@notification.NotificationTitle</strong>
+                <br />Your manager has assigned you a new Transferee, their name is  <a href="/Orders/Transferee/@notification.NotificationOrderId" class="notifications">@notification.NotificationOrderTransfereeFullName</a>
+            
         </li>
     }
     else
     {
-        <li data-OrderId="@notification.NotificationOrderId" data-id="@notification.Id" data-isread="@notification.IsRead" class="notification notifications_read" id="notificationlistitem_unread">
+        <li data-OrderId="@notification.NotificationOrderId" data-id="@notification.Id" data-isread="@notification.IsRead" data-isremoved="@notification.IsRemoved" class="notification notifications_read" id="notificationlistitem_unread">
             <label id="notificationlabel" class="notifications notification-label notification-close-read">&times</label>
             <strong>@notification.NotificationTitle</strong>
             <br />Your manager has assigned you a new Transferee, their name is  <a href="/Orders/Transferee/@notification.NotificationOrderId" class="notifications">@notification.NotificationOrderTransfereeFullName</a>
@@ -27,5 +29,5 @@
 
 }
 
-else}
+
 
