--- a/Odin/Views/Shared/Partials/_header.cshtml
+++ b/Odin/Views/Shared/Partials/_header.cshtml
@@ -12,8 +12,7 @@
                     <span id="spanNotificationCount" class="animated bounceInDown"></span>
                     <img src="~/Content/Images/icn_alert_B1.png">
                 </div>
-               
-                <ul id="ulNotifications" class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                <ul id="ulNotifications" class="dropdown-menu notification-dropdown" aria-labelledby="dropdownMenu1">
                        
                 </ul>
             </li>
@@ -23,8 +22,13 @@
                     <img src="~/Content/Images/icn_cal_B1.png">
                 </div>
                 <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu2">
-                    <li>Hello</li>
+                    <li>@Html.ActionLink("Help","Index","Help")</li>
+                    <li><a href="javascript:document.getElementById('logoutForm').submit()">Logout</a></li>
                 </ul>
+                @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+                {
+                    @Html.AntiForgeryToken()
+                }
             </li>
             <li class="primaryNavIconList__item dropdown">
                 <div class="dropdown-toggle" id="dropdownMenu3" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -41,3 +45,4 @@
 <script>
     $(document).ready(HeaderController.init);
 </script>
+
