First pass at PUTing the liked status and saving it via ajax

--- a/Odin/Views/Orders/Partials/_HousingProperties.cshtml
+++ b/Odin/Views/Orders/Partials/_HousingProperties.cshtml
@@ -59,7 +59,7 @@
                     @Html.DatePicker("date", "ViewingDate", false)
                 </div>
                 -->
-                <div class="col-md-1 like">
+                <div class="col-md-1">
                     @Html.EditorFor(m => propertyVM.Liked)
                 </div>
                 <!--
