Rerunning the property list setup each time it is loaded

--- a/Odin/Views/Orders/Partials/_HousingProperties.cshtml
+++ b/Odin/Views/Orders/Partials/_HousingProperties.cshtml
@@ -76,14 +76,6 @@
 
 <script>
     $(document).ready(function () {
-        $('.propertyItem').click(function (event) {
-            var propertyId = $(event.delegateTarget).data("property-id");
-            var propertyModalUrl = '/homefindingproperties/propertypartial/' + propertyId;
-            $('#propertyModalContent').load(propertyModalUrl, function (response, status, xhr) {
-                if (status == "success") {
-                    $('#propertyDetailsModal').modal('show');
-                }
-            });
-        });
+        TransfereeHousingController.setupPropertiesList();
     });
 </script>
