--- a/Odin/Views/Orders/Partials/_Housing.cshtml
+++ b/Odin/Views/Orders/Partials/_Housing.cshtml
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <div class="row" id="propertiesControls">
+    <div class="row controlsContainer" id="propertiesControls">
 
                         <!--
                         <form class="col-sm-6" id="housingFilter">
