--- a/Odin/Views/Shared/EditorTemplates/LikeDislike.cshtml
+++ b/Odin/Views/Shared/EditorTemplates/LikeDislike.cshtml
@@ -5,7 +5,7 @@
         likeStatusClass = Model.Value ? "like" : "dislike";
     }
 }
-    <div class="likeDislike row @likeStatusClass">
-        <div class="like col-xs-6" />
-        <div class="dislike col-xs-6" />
+    <div class="likeDislike row @likeStatusClass" data-property-id="@ViewData["propertyId"]">
+        <div class="like col-xs-6" data-property-id="@ViewData["propertyId"]" />
+        <div class="dislike col-xs-6" data-property-id="@ViewData["propertyId"]" />
     </div>
