--- a/Odin/Views/Orders/Transferee.cshtml
+++ b/Odin/Views/Orders/Transferee.cshtml
@@ -89,7 +89,8 @@
         @Styles.Render("~/Styling/transferee")
         @Styles.Render("~/Styling/sideNav")
         @Scripts.Render("~/Scripts/transferee")
-
+  
+        <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.2.0/mapquest.js"></script>
         <script>
             var currentOrderId = '@Model.Id';
             $(document).ready(function () {
@@ -102,3 +103,7 @@
 
         </script>
     }
+@section styles
+{
+    <link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.2.0/mapquest.css" />
+}
