--- a/Odin/Content/css/transferee/HFProperties.scss
+++ b/Odin/Content/css/transferee/HFProperties.scss
@@ -61,6 +61,11 @@
             float: left;
             margin-left: 1rem;
         }
+
+        img.location {
+            width: 70px;
+            height:70px;
+        }
     }
 
     @media screen and (min-width: 62rem) {
@@ -70,6 +75,10 @@
     }
 }
 
-#scheduledServices {
+#propertiesHeader {
     display: none;
+}
+
+li.propertyItem {
+    page-break-after: always;
 }
