--- a/Odin/Views/Orders/Partials/_HousingProperties.cshtml
+++ b/Odin/Views/Orders/Partials/_HousingProperties.cshtml
@@ -1,8 +1,8 @@
 ﻿@model IEnumerable<Odin.ViewModels.Orders.Transferee.HousingPropertyViewModel>
 
 <div id="propertiesBlock">
-    <ul class="row" id="propertiesList">
-        <li class="row" id="propertiesHeader">
+    <div class="row">
+        <div class="row" id="propertiesHeader">
             <div class="col-md-1">
                 <p>Location Photos:</p>
             </div>
@@ -29,26 +29,60 @@
                 <p>Property Comments:</p>
             </div>
             -->
-        </li>
+        </div>
+    </div>
+
+    <ul class="row sectionList" id="propertiesList">
 
         @foreach (var propertyVM in Model)
-            {
+        {
             <li class="row propertyItem" data-property-id="@propertyVM.Id">
-                <div class="col-md-1">
-                    <img class="location" src="@propertyVM.ThumbnailPhotoUrl" />
+
+
+                <div class="col-md-1 col-xs-12">
+                    <label class="mobileLabel">Property Photos</label>
+
+                    @if (ViewBag.IsPDF == true)
+                    {
+                        <ul class="sectionList">
+                            @{ int kount = 0; }
+                            @foreach (var photo in propertyVM.PropertyPhotos)
+                            {
+                                <li class="photo">
+                                    <img class="location" src="@photo.PhotoUrl" />
+                                </li>
+
+                                kount++;
+
+                                if (kount > 5)
+                                {
+                                    break;
+                                }
+                            }
+                        </ul>
+                    }
+                    else
+                    {
+                        <img class="location" src="@propertyVM.ThumbnailPhotoUrl" />
+                    }
+
                 </div>
-                @* Switch next 3 columns to col-md-2 when adding remaining columns *@
-                <div class="col-md-3">
+
+
+                <div class="col-md-3 col-xs-12">
+                    <label class="mobileLabel">Address</label>
                     <p>
                         @Html.DisplayFor(m => propertyVM.PropertyAddress)
                     </p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-xs-12">
+                    <label class="mobileLabel">Availability</label>
                     <p>
                         @Html.DisplayFor(m => propertyVM.PropertyAvailabilityDate)
                     </p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-xs-12">
+                    <label class="mobileLabel">BD | BA<br />Rent | Sq. Ft:</label>
                     <p>
                         @Html.DisplayFor(m => propertyVM.PropertyNumberOfBedrooms) | @Html.DisplayFor(m => propertyVM.PropertyNumberOfBathrooms)<br />
                         @Html.DisplayFor(m => propertyVM.PropertyAmount) | @Html.DisplayFor(m => propertyVM.PropertySquareFootage)
@@ -56,10 +90,11 @@
                 </div>
                 <!--
                 <div class="col-md-3">
-                    @Html.DatePicker("date", "ViewingDate", false)
+                    Html.DatePicker("date", "ViewingDate", false)
                 </div>
                 -->
-                <div class="col-md-1">
+                <div class="col-md-1 col-xs-12">
+                    <label class="mobileLabel">Like or Dislike</label>
                     @Html.EditorFor(m => propertyVM.Liked, new { propertyId = propertyVM.Id })
                 </div>
                 <!--
@@ -73,6 +108,11 @@
 
     </ul>
 </div>
+
+@if (ViewBag.IsPDF == true)
+{
+    @Styles.Render("~/Styling/properties")
+}
 
 <script>
     $(document).ready(function () {
