--- a/Odin/Content/css/transferee/HFProperties.scss
+++ b/Odin/Content/css/transferee/HFProperties.scss
@@ -82,3 +82,41 @@
 li.propertyItem {
     page-break-after: always;
 }
+
+.likeDislike {
+    width: 100px;
+    height: auto;
+
+    .likeDislike-btn {
+        height: 50px;
+        /*padding-left: 180px; /* Equal to width of new image */
+        background-position: center center !important;
+        cursor: pointer;
+    }
+
+    .like {
+        @extend .likeDislike-btn;
+        display: none;
+        background: url('/Content/Images/icn_ln_non_selected_like.png') no-repeat;
+    }
+
+    .dislike {
+        @extend .likeDislike-btn;
+        display: none;
+        background: url('/Content/Images/icn_ln_non_selected_dislike.png') no-repeat;
+    }
+
+    &.like {
+        .like {
+            display: block;
+            background: url('/Content/Images/icn_ln_selected_like.png') no-repeat;
+        }
+    }
+
+    &.dislike {
+        .dislike {
+            display: block;
+            background: url('/Content/Images/icn_ln_selected_dislike.png') no-repeat;
+        }
+    }
+}
