--- a/Odin/Views/Orders/Partials/_Itinerary.cshtml
+++ b/Odin/Views/Orders/Partials/_Itinerary.cshtml
@@ -52,7 +52,7 @@
             string id = Model.Id;
             if (Model.Itinerary.ElementAt(i).ItemType.Contains("Service"))
             {
-                link = "$('.item[data-panel=details]').trigger('click');";
+                link = "OrdersPageController.loadPanel('details');";
                 if (!dt.HasValue)
                 {
                     continue;
@@ -64,7 +64,7 @@
             }
             else
             {
-                link = "$('.item[data-panel=housing]').trigger('click');";
+                link = "OrdersPageController.loadPanel('housing');";
             }
 
             <li class="itineraryDay">
