--- a/Odin/Views/Orders/Partials/_HousingProperties.cshtml
+++ b/Odin/Views/Orders/Partials/_HousingProperties.cshtml
@@ -7,20 +7,20 @@
                 <p>Location Photos:</p>
             </div>
             @* Switch next 3 columns to col-md-2 when adding remaining columns *@
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <p>Address:</p>
             </div>
             <div class="col-md-3">
                 <p>Availability Date:</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <p>BD | BA<br />Rent | Sq. Ft:</p>
             </div>
-            <!--
-            <div class="col-md-3">
+            
+            <div class="col-md-2">
                 <p>Schedule a Viewing</p>
             </div>
-            -->
+            
             <div class="col-md-1">
                 <p>Like or Dislike:</p>
             </div>
@@ -69,7 +69,7 @@
                 </div>
 
 
-                <div class="col-md-3 col-xs-12">
+                <div class="col-md-2 col-xs-12">
                     <label class="mobileLabel">Address</label>
                     <p>
                         @Html.DisplayFor(m => propertyVM.PropertyAddress)
@@ -81,18 +81,19 @@
                         @Html.DisplayFor(m => propertyVM.PropertyAvailabilityDate)
                     </p>
                 </div>
-                <div class="col-md-4 col-xs-12">
+                <div class="col-md-3 col-xs-12">
                     <label class="mobileLabel">BD | BA<br />Rent | Sq. Ft:</label>
                     <p>
                         @Html.DisplayFor(m => propertyVM.PropertyNumberOfBedrooms) | @Html.DisplayFor(m => propertyVM.PropertyNumberOfBathrooms)<br />
                         @Html.DisplayFor(m => propertyVM.PropertyAmount) | @Html.DisplayFor(m => propertyVM.PropertySquareFootage)
                     </p>
                 </div>
-                <!--
-                <div class="col-md-3">
-                    Html.DatePicker("date", "ViewingDate", false)
+                
+                <div class="col-md-2">
+                    <label class="mobileLabel">Schedule a Viewing</label>
+                    @Html.DatePicker("date", "ViewingDate", propertyVM.ViewingDate, true)
                 </div>
-                -->
+                
                 <div class="col-md-1 col-xs-12">
                     <label class="mobileLabel">Like or Dislike</label>
                     @Html.EditorFor(m => propertyVM.Liked, new { propertyId = propertyVM.Id })
