--- a/Odin/Views/Orders/Partials/_Housing.cshtml
+++ b/Odin/Views/Orders/Partials/_Housing.cshtml
@@ -41,7 +41,7 @@
         </div>
         <div class="col-md-8 mapWrapper">
             
-            <div id="map"></div>
+            <div id="map" data-lat="@Model.Latitude" data-lng="@Model.Longitude"></div>
 
         </div>
         
