--- a/Odin/Views/Orders/Partials/_PropertyDetails.cshtml
+++ b/Odin/Views/Orders/Partials/_PropertyDetails.cshtml
@@ -43,9 +43,10 @@
                 <ul class="row sectionList">
                     <li class="col-md-12">
                         <label>@Html.DisplayNameFor(model => model.PropertyDescription)</label>
-                        <p>@Html.DisplayFor(model => model.PropertyDescription)</p>
+                        @*<p>@Html.DisplayFor(model => model.PropertyDescription)</p>*@
                         @*<p>@Model.PropertyDescription.Replace("<br />","\n")</p>*@
-                        @*@Html.Raw(@Model.PropertyDescription)*@
+                        <!--Should be safe because sanitized in view model.-->
+                        <p>@Html.Raw(@Model.PropertyDescription)</p>
                     </li>
                 </ul>
             </div>
