--- a/Odin/Content/css/transferee/HFProperties.scss
+++ b/Odin/Content/css/transferee/HFProperties.scss
@@ -96,27 +96,33 @@ li.propertyItem {
 
     .like {
         @extend .likeDislike-btn;
-        display: none;
-        background: url('/Content/Images/icn_ln_non_selected_like.png') no-repeat;
+        /*display: none;*/
     }
 
     .dislike {
         @extend .likeDislike-btn;
-        display: none;
-        background: url('/Content/Images/icn_ln_non_selected_dislike.png') no-repeat;
     }
 
     &.like {
         .like {
-            display: block;
+            /*display: block;*/
             background: url('/Content/Images/icn_ln_selected_like.png') no-repeat;
         }
     }
 
     &.dislike {
         .dislike {
-            display: block;
+            /*display: block;*/
             background: url('/Content/Images/icn_ln_selected_dislike.png') no-repeat;
         }
     }
+}
+
+.glyphicon-calendar {
+    display: none;
+}
+
+.form-control {
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
 }
