Small styling cleanup for housing page

--- a/Odin/Views/Orders/Partials/_Housing.cshtml
+++ b/Odin/Views/Orders/Partials/_Housing.cshtml
@@ -73,7 +73,7 @@
         </div>
     </div>
 
-    <div id="propertiesContainer">
+    <div class="row" id="propertiesContainer">
         @Html.Partial("~/Views/Orders/Partials/_HousingProperties.cshtml", Model.Properties)
     </div>
 
