--- a/Odin/Views/Orders/Partials/_HousingProperties.cshtml
+++ b/Odin/Views/Orders/Partials/_HousingProperties.cshtml
@@ -71,7 +71,7 @@
 
                 <div class="col-md-3 col-xs-12">
                     <label class="mobileLabel">Address</label>
-                    <p>
+                    <p class="propertyAddress">
                         @Html.DisplayFor(m => propertyVM.PropertyAddress)
                     </p>
                 </div>
