--- a/Odin/Content/css/orders.scss
+++ b/Odin/Content/css/orders.scss
@@ -21,7 +21,7 @@ div#list {
 
     div#search {
         margin-top: $primaryNavHeightSm;
-        padding: 2rem 4rem;
+        padding: 2rem;
         background-color: $DW_Lime;
         box-sizing: border-box;
         display: flex;
@@ -30,6 +30,15 @@ div#list {
         input {
             width: 100%;
             border: none;
+            padding: 0.5rem 1rem;
+            box-shadow: 0px 0px 0px 0px;
+
+
+            &:focus {
+                //border: 1px solid $DW_Blue;
+                outline: none;
+                box-shadow: 0px 0px 0px 0px;
+            }
         }
 
         button {
