[HOTFIX] Change url for login picture

--- a/Odin/Content/css/login.scss
+++ b/Odin/Content/css/login.scss
@@ -12,7 +12,7 @@ div.container.body-content {
     margin: 0 0;
 
     .loginWrap {
-        background-image: url('../Images/bg_img_w_gradient.png');
+        background-image: url('/Content/Images/bg_img_w_gradient.png');
         background-position: center;
         background-size: cover;
 
