Removed superflous migration (ViewingDate) and changed date display format

--- a/Odin/Views/Orders/Partials/_Appointment.cshtml
+++ b/Odin/Views/Orders/Partials/_Appointment.cshtml
@@ -2,7 +2,7 @@
 <div id="appointmentModal" data-appointment-id="@Model.Id">
 	
 			@Html.DisplayNameFor(Model => Model.ScheduledDate)
-			@Html.DatePicker("date", "ScheduledDate", Model.ScheduledDate.HasValue ? Model.ScheduledDate.Value.ToString():DateTime.Now.ToShortDateString())
+			@Html.DatePicker("date", "ScheduledDate", Model.ScheduledDate.HasValue ? Model.ScheduledDate.Value:DateTime.Now)
 			@Html.DisplayNameFor(Model => Model.Description)
 			@Html.EditorFor(Model => Model.Description, new { htmlAttributes = new { @class = "form-control", @type="input", @style="max-width:100%" } })
 
