--- a/Odin/Views/Shared/Partials/_header.cshtml
+++ b/Odin/Views/Shared/Partials/_header.cshtml
@@ -6,6 +6,8 @@
             <img class="primaryNavHome__logo" src="~/Content/Images/dwellworks_icon.png">
             <p>Odin</p>
         </a>
+        
+        @*<a href="@Url.Action("GetUserNotificationHistory", "NotificationHistory")">History</a>*@
         <ul class="primaryNavIconList">
             <li class="primaryNavIconList__item dropdown">
                 <div class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
