Finished sorting on orders page.

--- a/Odin/Content/css/orders.css
+++ b/Odin/Content/css/orders.css
@@ -51,6 +51,16 @@ div#list {
     font-weight: 400;
     font-size: 1.5rem;
     padding: 2rem 0; }
+    div#list li.header .sortLabel {
+      cursor: pointer;
+      -webkit-user-select: none;
+      /* Safari */
+      -moz-user-select: none;
+      /* Firefox */
+      -ms-user-select: none;
+      /* IE10+/Edge */
+      user-select: none;
+      /* Standard */ }
   div#list li.row .col-md-2 {
     margin-bottom: 2rem; }
   div#list li.row .col-md-2:last-child {
