--- a/Odin/Content/css/orders.scss
+++ b/Odin/Content/css/orders.scss
@@ -78,6 +78,14 @@ div#list {
         font-weight: 400;
         font-size: 1.5rem;
         padding: 2rem 0;
+
+        .sortLabel {
+            cursor: pointer;
+            -webkit-user-select: none; /* Safari */
+            -moz-user-select: none; /* Firefox */
+            -ms-user-select: none; /* IE10+/Edge */
+            user-select: none; /* Standard */
+        }
     }
 
     li.row {
